# RISC-V-Simulator

./: Document_final  Project_Overview_and_usage.md  README.md
Backup/project/: CMakeLists.txt  cache.hpp  centralized_fetch.cpp  centralized_fetch.hpp  instruction_parser.hpp  main.cpp  memory_hierarchy.hpp  pipeline.hpp  pipeline_core1.csv  pipelined_core.cpp  pipelined_core.hpp  pipelined_simulator.cpp  pipelined_simulator.hpp  scratchpad.hpp  shared_memory.hpp  sync_barrier.hpp  test.txt  test2.txt
Backup/project/test_programs/: array_sum.s  strided_array_no_spm.s  strided_array_with_spm.s
Phase_1/: CMakeLists.txt  core.cpp  core.hpp  (+4 more)
Phase_2/PHASE2_COA_FINAL/project_coa/: CMakeLists.txt  centralized_fetch.cpp  centralized_fetch.hpp  instruction_parser.hpp  main.cpp  pipeline.hpp  pipeline_core2.csv  pipelined_core.cpp  pipelined_core.hpp  pipelined_simulator.cpp  pipelined_simulator.hpp  shared_memory.hpp  testcase1.txt  testcase2.txt  testcase3.txt
Phase_2/PHASE2_COA_FINAL/project_coa/OLD/: core.hpp  simulator.cpp  simulator.hpp
Phase_2/PHASE2_COA_FINAL/project_coa/Textfiles/: array_sum_test.s  halt_test.txt  hazard_test2.txt  hazard_tests.txt  program.txt  sample.txt  sample2.txt  sample3.txt  temp.txt  temp2.txt
Phase_3/: CMakeLists.txt  algo1.txt  algo2.txt  array_sum.txt  bubble_sort.txt  cache.cpp  cache.hpp  cache_config.txt  cache_system.hpp  cacheconfig  cacheconfig2  centralized_fetch.cpp  centralized_fetch.hpp  instruction_parser.hpp  main.cpp  memory_hierarchy.cpp  memory_hierarchy.hpp  pipeline.hpp  pipelined_core.cpp  pipelined_core.hpp  pipelined_simulator.cpp  pipelined_simulator.hpp  scratchpad_memory.hpp  shared_memory.hpp  sync_mechanism.hpp  test.txt
